Feat: add favicon, fonts for project

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 </head>
 <body>
+  <h1>Привет, мир!</h1>
+
 
   <script
   src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
