--- a/index.html
+++ b/index.html
@@ -9,7 +9,38 @@
   <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 </head>
 <body>
-  <h1>Привет, мир!</h1>
+  <header>
+    <div class="container">
+      <div class="menu">
+        <div class="logo menu__logo">
+          <img src="img/logo.png" alt="logo">
+          <a href="index.html" class="menu__logo__text">SAYTSPB</a>
+        </div>
+        <!-- /.logo menu__logo -->
+        <div class="nav menu__nav">
+          <a href="" class="nav__item">Продвижение</a>
+          <a href="" class="nav__item">Аудит</a>
+          <a href="" class="nav__item">Цены</a>
+          <a href="" class="nav__item">Контакты</a>
+        </div>
+        <!-- /.nav menu__nav -->
+        <div class="contacts menu__contacts">
+          <a href="tel:+79997683299" class="phone contacts__phone">+7(812)-992-10-30</a>
+          <button class="button contacts__button button--primary">Заказать звонок</button>
+
+        </div>
+        <!-- /.contacts menu__contacts -->
+      </div>
+      <!-- /.menu -->
+    </div>
+    <!-- /.container -->
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
 
 
   <script
