feat: section hero

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Продвижение сайтов в Санкт-Петербурге</title>
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
@@ -36,7 +36,36 @@
     <!-- /.container -->
   </header>
   <main>
-
+    <section id=hero class="hero">
+      <div class="social hero__social">
+        <a href="whatsapp://send?text=Hello&phone=+78129921030&abid=+78129921030" class="social__link"><img src="img/hero/wa-hero.png" alt="WhatsApp"></a>
+        <a href="viber://chat?number=+78129921030" class="social__link"><img src="img/hero/viber-hero.png" alt="Viber" class="social__item"></a>
+        <a href="mailto:example@mail.ru" class="social__link"><img src="img/hero/mail-hero.png" alt="Email"></a>
+      </div>
+      <!-- /.social hero__sotial -->
+      <div class="container">
+        <div class="row">
+          <div class="col-50">
+            <div class="hero__content">
+              <h1 class="title hero__title">Продвижение Сайтов <br> <span class="title hero__title--primary">в&nbsp;Санкт-Петербурге</span></h1>
+              <p class="hero__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
+              </p>
+              <button class="button hero__button button--primary">Обратный звонок</button>
+            </div>
+            <!-- /.hero__content -->
+          </div>
+          <!-- /.col-50 -->
+          <div class="col-50">
+            <div class="hero__photo"><img src="img/hero/photo-hero.png" alt="photo"></div>
+          </div>
+          <!-- /.col-50 -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.hero -->
   </main>
   <footer>
 
