feat: add section statics and video-player

--- a/index.html
+++ b/index.html
@@ -66,6 +66,35 @@
       <!-- /.container -->
     </section>
     <!-- /.hero -->
+    <div class="section statistics">
+        <div class="statistics__video video" id="player">
+          <script src="https://www.youtube.com/iframe_api"></script>
+          <img src="img/statistics/play.png" alt="play icon" class="video__play">
+      </div>
+      <div class="container">
+        <div class="statistics statistics__description">
+          <div class="statistics__item">
+            <div class="statistics__item--title">11</div>
+            <div class="statistics__item--text">Лет на рынке</div>
+          </div>
+          <div class="statistics__item">
+            <div class="statistics__item--title">>200</div>
+            <div class="statistics__item--text">Клиентов на раскрутке</div>
+          </div>
+          <div class="statistics__item">
+            <div class="statistics__item--title">121%</div>
+            <div class="statistics__item--text">Присрост посещаемости</div>
+          </div>
+          <div class="statistics__item">
+            <div class="statistics__item--title">2200</div>
+            <div class="statistics__item--text">Заявок у клиентов</div>
+          </div>
+        </div>
+        <!-- /.video__statistics -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.section statistics -->
   </main>
   <footer>
 
