feat: mobile version for hero & staticts

--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
       </div>
       <!-- /.social hero__sotial -->
       <div class="container">
-        <div class="row">
-          <div class="col-50">
             <div class="hero__content">
               <h1 class="title hero__title">Продвижение Сайтов <br> <span class="title hero__title--primary">в&nbsp;Санкт-Петербурге</span></h1>
               <p class="hero__text">
@@ -54,22 +52,14 @@
               <button class="button hero__button button--primary">Обратный звонок</button>
             </div>
             <!-- /.hero__content -->
-          </div>
-          <!-- /.col-50 -->
-          <div class="col-50">
-            <div class="hero__photo"><img src="img/hero/photo-hero.png" alt="photo"></div>
-          </div>
-          <!-- /.col-50 -->
-        </div>
-        <!-- /.row -->
       </div>
       <!-- /.container -->
     </section>
     <!-- /.hero -->
     <div class="section statistics">
-        <div class="statistics__video video" id="player">
-          <script src="https://www.youtube.com/iframe_api"></script>
-          <img src="img/statistics/play.png" alt="play icon" class="video__play">
+      <div class="statistics__video video" id="player">
+        <script src="https://www.youtube.com/iframe_api"></script>
+        <img src="img/statistics/play.png" alt="play icon" class="video__play">
       </div>
       <div class="container">
         <div class="statistics statistics__description">
@@ -90,7 +80,7 @@
             <div class="statistics__item--text">Заявок у клиентов</div>
           </div>
         </div>
-        <!-- /.video__statistics -->
+        <!-- /.statistics__description -->
       </div>
       <!-- /.container -->
     </div>
