feat: add section Avantage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <!-- /.logo menu__logo -->
         <div class="nav menu__nav">
-          <a href="" class="nav__item">Продвижение</a>
+          <a href="#statistics" class="nav__item">Продвижение</a>
           <a href="" class="nav__item">Аудит</a>
           <a href="" class="nav__item">Цены</a>
           <a href="" class="nav__item">Контакты</a>
@@ -56,7 +56,7 @@
       <!-- /.container -->
     </section>
     <!-- /.hero -->
-    <div class="section statistics">
+    <div id=statistics class="section statistics">
       <div class="statistics__video video" id="player">
         <script src="https://www.youtube.com/iframe_api"></script>
         <img src="img/statistics/play.png" alt="play icon" class="video__play">
@@ -85,6 +85,66 @@
       <!-- /.container -->
     </div>
     <!-- /.section statistics -->
+    <section class="avantage">
+      <div class="container">
+        <div class="section__title avantage__title">
+          <h2>Наши Преимущества</h2>
+        </div>
+        <!-- /.section__title -->
+        <div class="section__description avantage__description">
+          <p>Профессиональный подход - расплывчатая формулировка, которой давно не принято доверять. Лучший способ рекламы - благоприятные отзывы заказчиков и практические примеры работ, которые представлены ниже. </p>
+        </div>
+        <!-- /.section__description avantage__description -->
+        <div class="row">
+          <div class="col-30">
+            <div class="avantage__card">
+              <img src="img/avantage/img-1.png" alt="img1" class="avantage__card-image">
+              <strong class="avantage__card-title">Работа без предоплаты</strong>
+              <p class="avantage__card-text">Оплата исключительно по факту результатов месячного сотрудничества.</p>
+            </div>
+            <!-- /.avantage__card -->
+          </div>
+          <div class="col-30">
+            <div class="avantage__card">
+              <img src="img/avantage/img-2.png" alt="img2" class="avantage__card-image">
+              <strong class="avantage__card-title">Идивидуальный подход</strong>
+              <p class="avantage__card-text">Возможность сотрудничества по типовым алгоритмам или с совместной разработкой индивидуального проекта SEO-продвижения.</p>
+            </div>
+          </div>
+          <div class="col-30">
+            <div class="avantage__card">
+              <img src="img/avantage/img-3.png" alt="img3" class="avantage__card-image">
+              <strong class="avantage__card-title">Готовые решения</strong>
+              <p class="avantage__card-text">Готовые решения для различных ресурсов, от узкоспециализированных торговых площадок до масштабных коммерческих проектов.</p>
+            </div>
+          </div>
+          <div class="col-30">
+            <div class="avantage__card">
+              <img src="img/avantage/img-4.png" alt="img4" class="avantage__card-image">
+              <strong class="avantage__card-title">Глубокий анализ</strong>
+              <p class="avantage__card-text">Глубокий анализ целевой аудитории и статегии развития прямых конкурентов.</p>
+            </div>
+          </div>
+          <div class="col-30">
+            <div class="avantage__card">
+              <img src="img/avantage/img-5.png" alt="img5" class="avantage__card-image">
+              <strong class="avantage__card-title">Актуализация ресурса</strong>
+              <p class="avantage__card-text">Актуализация ресурса по мере корректировки поисковых алгоритмов.</p>
+            </div>
+          </div>
+          <div class="col-30">
+            <div class="avantage__card">
+              <img src="img/avantage/img-6.png" alt="img6" class="avantage__card-image">
+              <strong class="avantage__card-title">Ежемесячные отчеты</strong>
+              <p class="avantage__card-text">Ежемесячные отчёты о предпринятых усилиях и практических результатах.</p>
+            </div>
+          </div>
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.avantage -->
   </main>
   <footer>
 
