feat: add section Services

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- /.logo menu__logo -->
         <div class="nav menu__nav">
           <a href="#statistics" class="nav__item">Продвижение</a>
-          <a href="" class="nav__item">Аудит</a>
+          <a href="#services" class="nav__item">Аудит</a>
           <a href="" class="nav__item">Цены</a>
           <a href="" class="nav__item">Контакты</a>
         </div>
@@ -145,6 +145,64 @@
       <!-- /.container -->
     </section>
     <!-- /.avantage -->
+    <section id=services class="services">
+      <div class="container">
+        <div class="section__title services__title">
+          <h2>Наши Услуги</h2>
+        </div>
+        <!-- /.section__title services__title -->
+        <div class="section__description services__description">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud ex</p>
+        </div>
+        <!-- /.section__description services__description -->
+        <div class="row__services">
+          <div class="col-30__services">
+            <div class="services__card">
+              <img src="img/services/img-1.png" alt="img1" class="servicese__card-image">
+              <strong class="services__card-title">Продвижение Сайтов</strong>
+              <p class="services__card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+            </div>
+            <!-- /.services__card -->
+          </div>
+          <div class="col-30__services">
+            <div class="services__card">
+              <img src="img/services/img-2.png" alt="img2" class="servicese__card-image">
+              <strong class="services__card-title">Аудит Сайтов</strong>
+              <p class="services__card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim </p>
+            </div>
+            <!-- /.services__card -->
+          </div>
+          <div class="col-30__services">
+            <div class="services__card">
+              <img src="img/services/img-3.png" alt="img3" class="servicese__card-image">
+              <strong class="services__card-title">Создание Сайтов</strong>
+              <p class="services__card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+            </div>
+            <!-- /.services__card -->
+          </div>
+          <div class="col-30__services">
+            <div class="services__card">
+              <img src="img/services/img-4.png" alt="img4" class="servicese__card-image">
+              <strong class="services__card-title">Контекстная Реклама</strong>
+              <p class="services__card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+            </div>
+            <!-- /.services__card -->
+          </div>
+          <div class="col-30__services">
+            <div class="services__card">
+              <img src="img/services/img-5.png" alt="img5" class="servicese__card-image">
+              <strong class="services__card-title">Поддержка</strong>
+              <p class="services__card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+            </div>
+            <!-- /.services__card -->
+          </div>
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+
+    </section>
+    <!-- /.services -->
   </main>
   <footer>
 
