feat: add footer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- /.nav menu__nav -->
         <div class="contacts menu__contacts">
           <a href="tel:+79997683299" class="phone contacts__phone">+7(812)-992-10-30</a>
-          <button class="button contacts__button button--primary">Заказать звонок</button>
+          <button class="button contacts__button button--primary"><a href="#prices" class="button__link">Заказать звонок</a></button>
 
         </div>
         <!-- /.contacts menu__contacts -->
@@ -49,7 +49,7 @@
               <p class="hero__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
               </p>
-              <button class="button hero__button button--primary">Обратный звонок</button>
+              <button class="button hero__button button--primary"><a href="#prices"class="button__link">Обратный звонок</a></button>
             </div>
             <!-- /.hero__content -->
       </div>
@@ -235,7 +235,15 @@
     <!-- /.prices -->
   </main>
   <footer>
-
+    <div class="container">
+      <div class="logo footer__logo">
+        <img src="img/footer-logo.png" alt="logo" class="footer__logo__img">
+        <a href="index.html" class="footer__logo__text">SAYTSPB</a>
+      </div>
+      <!-- /.logo menu__logo -->
+      <div class="copy">Copyright © 2019. Все права защищены</div>
+    </div>
+    <!-- /.container -->
   </footer>
   <div class="modal__success">
     <div class="modal__success__dialog">
