refact: mobile version

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- /.nav menu__nav -->
         <div class="contacts menu__contacts">
           <a href="tel:+78129921030" class="phone contacts__phone">+7(812)-992-10-30</a>
-          <button class="button contacts__button button--primary"><a href="#prices" class="button__link">Заказать звонок</a></button>
+          <button class="button contacts__button button--primary">Заказать звонок</button>
 
         </div>
         <!-- /.contacts menu__contacts -->
@@ -49,7 +49,7 @@
               <p class="hero__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
               </p>
-              <button class="button hero__button button--primary"><a href="#prices"class="button__link">Обратный звонок</a></button>
+              <button class="button hero__button button--primary">Обратный звонок</button>
             </div>
             <!-- /.hero__content -->
       </div>
@@ -59,7 +59,8 @@
     <div id=statistics class="section statistics">
       <div class="statistics__video video" id="player">
         <script src="https://www.youtube.com/iframe_api"></script>
-        <img src="img/statistics/play.png" alt="play icon" class="video__play">
+        <img src="img/statistics/play.png" alt="play icon" class="statistics__video__play">
+        <img src="img/statistics/play-m.png" alt="play icon" class="statistics__video__play__mobile">
       </div>
       <div class="container">
         <div class="statistics statistics__description">
@@ -95,8 +96,8 @@
           <p>Профессиональный подход - расплывчатая формулировка, которой давно не принято доверять. Лучший способ рекламы - благоприятные отзывы заказчиков и практические примеры работ, которые представлены ниже. </p>
         </div>
         <!-- /.section__description avantage__description -->
-        <div class="row">
-          <div class="col-30">
+        <div class="row avantage__row">
+          <div class="col-30 avantage__col-30">
             <div class="avantage__card">
               <img src="img/avantage/img-1.png" alt="img1" class="avantage__card-image">
               <strong class="avantage__card-title">Работа без предоплаты</strong>
@@ -104,35 +105,35 @@
             </div>
             <!-- /.avantage__card -->
           </div>
-          <div class="col-30">
+          <div class="col-30 avantage__col-30">
             <div class="avantage__card">
               <img src="img/avantage/img-2.png" alt="img2" class="avantage__card-image">
               <strong class="avantage__card-title">Идивидуальный подход</strong>
               <p class="avantage__card-text">Возможность сотрудничества по типовым алгоритмам или с совместной разработкой индивидуального проекта SEO-продвижения.</p>
             </div>
           </div>
-          <div class="col-30">
+          <div class="col-30 avantage__col-30">
             <div class="avantage__card">
               <img src="img/avantage/img-3.png" alt="img3" class="avantage__card-image">
               <strong class="avantage__card-title">Готовые решения</strong>
               <p class="avantage__card-text">Готовые решения для различных ресурсов, от узкоспециализированных торговых площадок до масштабных коммерческих проектов.</p>
             </div>
           </div>
-          <div class="col-30">
+          <div class="col-30 avantage__col-30">
             <div class="avantage__card">
               <img src="img/avantage/img-4.png" alt="img4" class="avantage__card-image">
               <strong class="avantage__card-title">Глубокий анализ</strong>
               <p class="avantage__card-text">Глубокий анализ целевой аудитории и статегии развития прямых конкурентов.</p>
             </div>
           </div>
-          <div class="col-30">
+          <div class="col-30 avantage__col-30">
             <div class="avantage__card">
               <img src="img/avantage/img-5.png" alt="img5" class="avantage__card-image">
               <strong class="avantage__card-title">Актуализация ресурса</strong>
               <p class="avantage__card-text">Актуализация ресурса по мере корректировки поисковых алгоритмов.</p>
             </div>
           </div>
-          <div class="col-30">
+          <div class="col-30 avantage__col-30">
             <div class="avantage__card">
               <img src="img/avantage/img-6.png" alt="img6" class="avantage__card-image">
               <strong class="avantage__card-title">Ежемесячные отчеты</strong>
@@ -234,24 +235,25 @@
     </section>
     <!-- /.prices -->
     <section id=feedback class="section feedback">
-      <div class="container">
+      <div class="feedback__container">
         <div class="row">
           <div class="col-50">
             <div class="feedback__title">Остались вопросы? <br> Напишите нам! <br> Отправте Ваше сообщение через форму или <a href="mailto:info@saytspb.ru" class="feedback__link">e-mail</a>.</div>
             <div class="feedback__description">
               <div class="feedback__description__item">
                 <strong class="feedback__strong">Адресс</strong>
-                <p>Город Санкт-Петербург</p>
-                <p>Улица Мурзинская дом 11</p> 
-                <p><a href="tel:+78129921030" class="feedback__description__link">+7(812)-992-10-30</a></p>  
-                <p><a href="mailto:info@saytspb.ru" class="feedback__description__link">info@saytspb.ru</a></p>
+               <br> Город Санкт-Петербург <br>
+                Улица Мурзинская дом 11 <br>
+                <a href="tel:+78129921030" class="feedback__description__link">+7(812)-992-10-30</a>
+                <br>
+                <a href="mailto:info@saytspb.ru" class="feedback__description__link">info@saytspb.ru</a>
               </div>
               <div class="feedback__description__item">
-                <strong class="feedback__strong">Рабочие дни</strong>
+                <strong class="feedback__medium">Рабочие дни</strong>
                 <p>Понедельник-Пятница</p>
-                <strong class="feedback__strong">Выходные </strong>
+                <strong class="feedback__medium">Выходные </strong>
                 <p>Суббота-Воскресенье</p>
-                <strong class="feedback__strong">09:00-18:00</strong>
+                <strong class="feedback__medium">09:00-18:00</strong>
               </div>
             </div>
             <!-- /.feedback__description -->
@@ -281,7 +283,7 @@
         </div>
         <!-- /.row -->
       </div>
-      <!-- /.container -->
+      <!-- /.feedback__container -->
     </section>
     <!-- /.section feedback -->
   </main>
