feat: add section Cases

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Продвижение сайтов в Санкт-Петербурге</title>
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
@@ -59,8 +60,8 @@
     <div id=statistics class="section statistics">
       <div class="statistics__video video" id="player">
         <script src="https://www.youtube.com/iframe_api"></script>
-        <img src="img/statistics/play.png" alt="play icon" class="statistics__video__play">
-        <img src="img/statistics/play-m.png" alt="play icon" class="statistics__video__play__mobile">
+        <img src="img/statistics/play.png" alt="play icon" class="statistics__video__play video__play">
+        <img src="img/statistics/play-m.png" alt="play icon" class="statistics__video__play__mobile video__play">
       </div>
       <div class="container">
         <div class="statistics statistics__description">
@@ -234,6 +235,121 @@
       <!-- /.container -->
     </section>
     <!-- /.prices -->
+    <section class="section cases">
+      <div class="container">
+        <div class="section__title cases__title">
+          <h2>Наши Кейсы</h2>
+        </div>
+        <!-- /.section__title cases__title -->
+        <div class="section__description cases__description">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud ex
+        </div>
+        <!-- /.section__description cases__description -->
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="cases__row">
+                <h3 class="slide__title">Ремонт телефонов</h3>
+                <div class="col-50">
+                  <div class="slide__text--green">Результат за 4 месяца:</div>
+                  <div class="slide__text">
+                    +11 запросов у Яндекса, +10 у Google в топ-3 <br>
+                    +42 запросов у Яндекса, +55 у Google в топ-5 <br>
+                    +74 запросов у Яндекса, +119 у Google в топ-10
+                  </div>
+                  <div class="slide__text--green">Динамика улучшения видимости сайта:</div>
+                  <div class="slide__text">Посмотреть позиции до и после <a href="index.html" class="slide__link">>></a>
+                  </div>
+                  <div class="slide__text--green">Услуги:</div>
+                  <div class="slide__text">
+                    <ul class="cases__ul">
+                      <li class="cases__list">Технический SEO аудит</li>
+                      <li class="cases__list">Оптимизация сайта</li>
+                      <li class="cases__list">Юзабилити аудит</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-50">
+                  <div class="shedule__title">Статистика кол-ва переходов из поисковых 
+                    систем</div>
+                  <div class="shedule__text">Источник: Яндекс Метрика</div>
+                  <img src="img/cases/schedule-cases.jpg" alt="shedule">
+                </div>
+              </div>
+              <!-- /.row -->
+            </div>
+            <div class="swiper-slide">
+              <div class="cases__row">
+                <h3 class="slide__title">Онлайн-издательство</h3>
+                <div class="col-50">
+                  <div class="slide__text--green">Результат за 4 месяца:</div>
+                  <div class="slide__text">
+                    +11 запросов у Яндекса, +10 у Google в топ-3 <br>
+                    +42 запросов у Яндекса, +55 у Google в топ-5 <br>
+                    +74 запросов у Яндекса, +119 у Google в топ-10
+                  </div>
+                  <div class="slide__text--green">Динамика улучшения видимости сайта:</div>
+                  <div class="slide__text">Посмотреть позиции до и после <a href="index.html" class="slide__link">>></a>
+                  </div>
+                  <div class="slide__text--green">Услуги:</div>
+                  <div class="slide__text">
+                    <ul class="cases__ul">
+                      <li class="cases__list">Технический SEO аудит</li>
+                      <li class="cases__list">Оптимизация сайта</li>
+                      <li class="cases__list">Юзабилити аудит</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-50">
+                  <div class="shedule__title">Статистика кол-ва переходов из поисковых 
+                    систем</div>
+                  <div class="shedule__text">Источник: Яндекс Метрика</div>
+                  <img src="img/cases/schedule-cases.jpg" alt="shedule">
+                </div>
+              </div>
+              <!-- /.row -->
+            </div>
+            <div class="swiper-slide">
+              <div class="cases__row">
+                <h3 class="slide__title">Магазин бытовой техники</h3>
+                <div class="col-50">
+                  <div class="slide__text--green">Результат за 4 месяца:</div>
+                  <div class="slide__text">
+                    +11 запросов у Яндекса, +10 у Google в топ-3 <br>
+                    +42 запросов у Яндекса, +55 у Google в топ-5 <br>
+                    +74 запросов у Яндекса, +119 у Google в топ-10
+                  </div>
+                  <div class="slide__text--green">Динамика улучшения видимости сайта:</div>
+                  <div class="slide__text">Посмотреть позиции до и после <a href="index.html" class="slide__link">>></a>
+                  </div>
+                  <div class="slide__text--green">Услуги:</div>
+                  <div class="slide__text">
+                    <ul class="cases__ul">
+                      <li class="cases__list">Технический SEO аудит</li>
+                      <li class="cases__list">Оптимизация сайта</li>
+                      <li class="cases__list">Юзабилити аудит</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-50">
+                  <div class="shedule__title">Статистика кол-ва переходов из поисковых 
+                    систем</div>
+                  <div class="shedule__text">Источник: Яндекс Метрика</div>
+                  <img src="img/cases/schedule-cases.jpg" alt="shedule">
+                </div>
+              </div>
+              <!-- /.row -->
+            </div>
+          </div>
+          <!-- Add Arrows -->
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+        </div>
+      <a href="index.html"><div class="button button--primary cases__button">Портфолио</div></a>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section cases -->
     <section id=feedback class="section feedback">
       <div class="feedback__container">
         <div class="row">
